[gd_scene load_steps=5 format=3 uid="uid://bufi0wh54u5x5"]

[ext_resource type="Theme" uid="uid://c5a1nyqumj46j" path="res://menu/menu_theme.tres" id="1_mkxnc"]
[ext_resource type="Script" path="res://menu/Menu.gd" id="2_6amk3"]
[ext_resource type="Texture2D" uid="uid://bxyximtgui1ux" path="res://assets/grass_menu_tile.png" id="2_q14jx"]
[ext_resource type="PackedScene" uid="uid://tmxndy6x0u3l" path="res://menu/ScoreboardContainer.tscn" id="4_6ss1l"]

[node name="Menu" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme = ExtResource("1_mkxnc")
script = ExtResource("2_6amk3")

[node name="Panel" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_q14jx")
stretch_mode = 1

[node name="Content" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Authors" type="Label" parent="Content"]
offset_right = 284.0
offset_bottom = 18.0
text = "A game by Ichicoro and Steffo"
horizontal_alignment = 1

[node name="Title" type="Label" parent="Content"]
offset_top = 22.0
offset_right = 284.0
offset_bottom = 72.0
size_flags_vertical = 6
theme_override_font_sizes/font_size = 48
text = "Harvest"
horizontal_alignment = 1

[node name="Inputs" type="Control" parent="Content"]
layout_mode = 3
anchors_preset = 0
offset_left = 142.0
offset_top = 90.0
offset_right = 142.0
offset_bottom = 90.0
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="NameInput" type="TextEdit" parent="Content/Inputs"]
custom_minimum_size = Vector2(140, 28)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 6
placeholder_text = "What's your name?"

[node name="Buttons" type="Control" parent="Content"]
layout_mode = 3
anchors_preset = 0
offset_top = 123.0
offset_right = 284.0
offset_bottom = 123.0
size_flags_vertical = 6

[node name="HBoxContainer" type="HBoxContainer" parent="Content/Buttons"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="PlayButton" type="Button" parent="Content/Buttons/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(36, 2.08165e-12)
offset_left = 96.0
offset_right = 132.0
offset_bottom = 18.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 0
disabled = true
text = "Play"

[node name="ScoresButton" type="Button" parent="Content/Buttons/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(52, 2.08165e-12)
offset_left = 136.0
offset_right = 188.0
offset_bottom = 18.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 0
disabled = true
text = "Scores"

[node name="Authors2" type="Label" parent="Content"]
offset_top = 142.0
offset_right = 284.0
offset_bottom = 160.0
size_flags_vertical = 1
text = "Ludum Dare 52 - Harvest"
horizontal_alignment = 1

[node name="ScoreboardContainer" parent="." instance=ExtResource("4_6ss1l")]

[connection signal="text_changed" from="Content/Inputs/NameInput" to="." method="_on_name_input_text_changed"]
[connection signal="pressed" from="Content/Buttons/HBoxContainer/PlayButton" to="." method="play"]
[connection signal="pressed" from="Content/Buttons/HBoxContainer/ScoresButton" to="ScoreboardContainer" method="show_scores"]
